...
    <string name="yaxis">Y-Axis</string>
    <string name="button_search">Search</string>
    <string name="element_key">Element Key</string>
    <string name="element_name">Element Name</string>
    <string name="column_type">Column Type</string>
...
    <string name="read_access_control_group">Read Access Control Group:</string>
    <string name="select_view">Select View</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
    <string name="error_while_changing_sort_column">Error while changing sort column</string>
    <string name="error_while_changing_index_column">Error while changing index column</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="navigate">Navigate</string>
...
    <string name="lat_long_not_set">Latitude or longitude columns are not set!</string>
    <string name="list_view_file_not_set">List view file is not set!</string>
    <string name="list_view_file">List View File</string>
    <string name="edit_default_form">Edit Default Form</string>
    <string name="default_form">Default Form</string>
    <string name="table_manager_title">Table Manager > %1$s</string>
    <string name="manage_property_sets_title">Manage Property Sets > %1$s</string>
...
    <string name="choose_account">Please choose an account</string>
    <string name="please_wait">Please Wait</string>
    <string name="columns">Columns</string>
    <string name="cannot_edit_row_please_try_again">Cannot edit row, please try again</string>
    <string name="synchronizing">Synchronizing&#8230;</string>
...
    <string name="general_settings">General Settings</string>
    <string name="table_display_name">Display Name</string>
    <string name="display_name">Display Name</string>
    <string name="table_id">Table ID</string>
    <string name="change_table_display_name">Change Table Display Name</string>
    <string name="table_type">Table Type</string>
...
    <string name="map_view_settings">Map View Settings</string>
    <string name="display_map_view_settings">Map View Settings</string>
    <string name="detail_view_file">Detail View File</string>
    <string name="default_survey_form">Default Survey Form</string>
    <string name="change_detail_view_file">Change Detail View File</string>
...
    <string name="color_rule_title_for">Color Rules for %1$s</string>
    <string name="row_color_rule_title_for">Row Color Rules for %1$s</string>
    <string name="map_list_view_file">Map List View File</string>
    <string name="confirm_delete_color_rule">Confirm Delete Color Rule</string>
    <string name="are_you_sure_delete_color_rule">Please confirm deletion of color rule: %1$s</string>
...
    <string name="merge_server_into_defaults">Merge Server Sync Set into Defaults</string>
    <string name="change_view_type">Change View Type</string>
    <string name="change_default_view_type">Change Default View Type</string>
    <string name="default_view_type">Default View Type</string>
    <string name="map_view_latitude_column">Map View Latitude Column</string>
...
    <string name="database_unavailable">Database Unavailable</string>

    <string name="file_not_under_app_dir">File is not located under %1$s directory</string>
    <string name="no_form_id_specified">Form Id must be specified</string>
    <string name="survey_not_installed">ODK-X Survey is not installed</string>
...
    <string name="set_index_column_fail">Unable to set Index Column</string>

    <string name="invalid_form">That form id doesn\'t exist</string>
    <string name="invalid_form_name">The form id should begin with a letter and contain only letters, digits or underscores.</string>
    <string name="invalid_integer">The number you entered was invalid</string>
...
