<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<android.webkit.WebView
		android:id="@+id/webkit"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
	/>
	
	<!-- empty view -->
	<TextView
		android:id="@android:id/empty"
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/database_unavailable" />
    
</LinearLayout>
